app/static/css/custom.css
/* ... */
.icon-comment {
    height: 16px;
    margin-top: 12px;
    margin-right: 14px;
}

    
/* Layout 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.header {
    display: block;
    position: fixed;
    top: 0px;
    z-index: 100;
    width: 100%;
    height: 6.5rem;
    background: #fbfaf9;
    border-bottom: 1px solid #ff9900;
}
.full-width-container {
    padding: 0 2rem;
}
@media (min-width: 750px) {
    .full-width-container {
        padding: 0 9rem;
    }
}

.progress {
    display: block;
    height: 6.5rem;
    border-bottom: 2px solid #33C3F0;
    transition: width 0.5s ease-out;
}
.header .logo {
    width: 5rem;
    height: 5rem;
    margin: 0.7rem 1rem 0 0;
}
.header .button {
    margin-top: 1.5rem;
}
.header .title {
    margin-top: 1.6rem;
}
@media (min-width: 550px) {
    .header .title {
        margin-top: 1.2rem;
    }
}
.header .user {
    margin: 1.3em 1em 0 0;
    float: right;
}
.header .user a {
    font-weight: bold;
    text-decoration: none;
}
.content {
    /*margin-top: 9rem;*/
}
.section {
    padding: 8rem 0 7rem;
    text-align: center;
}
.section-heading,
.section-description {
    margin-bottom: 1.2rem;
}
.hero {
    background-size: cover;
}
.hero-heading, 
.hero-content {
    margin: 1rem 2rem 2rem 2rem;
}
.hero-button {
    margin: 0 2rem 4rem 2rem;
}
.glass {
    position: relative;
    background-color: #fff;
    z-index: 0;
    overflow: hidden;
    display: inline-block;
    box-shadow: 0 0 10px #000;
    max-width: 900px;
}
.glass::before {
    width: 100%;
    height: 100%;
    margin-left: -50%;
    overflow: hidden;
    z-index: -1;
    display: inline-block;
    position: absolute;
    content: ' ';
    -webkit-filter: url('#blur');
    -webkit-filter: blur(5px);
    filter: url('#blur');
    filter: blur(5px);
    opacity: 0.5;
}
.glass span {
    font-style: italic;
    display: block;
    margin: -1.5em 0 1em 0;
}
@media (min-width: 550px) {
    .hero {
        padding-bottom: 12rem;
        text-align: left;
        height: 166px;
    }
    .hero-heading {
        font-size: 2.4rem;
    }
    .hero-content {
        font-size: 1.5rem;
    }
    .glass::before {
        margin-left: 0;
    }
    .glass span {
        display: inline-block;
        margin: 0;
        max-width: 270px;
        vertical-align: middle;
    }
}
@media (min-width: 750px) {
    .hero {
        height: 190px;
    }
    .hero-heading {
        font-size: 6.0rem;
    }
    .hero-content {
        font-size: 2.0rem;
    }
    .hero-button {
        font-size: 2rem;
        line-height: 4.7rem;
        height: 5rem;
    }
    .section-description {
        max-width: 60%;
        margin-left: auto;
        margin-right: auto;
    }
}
.support-action {
    display: block;
    border: 1px solid #bbb;
    border-radius: 4px;
    border-color: #3299bb;
    background-color: #fbfaf9;
    padding: 0.5em 1em;
    color: #552453;
    text-decoration: none;
}
.support-action:hover {
    border-color: #1eaeda;
    color: #552453;
    background-color: #fff;
    cursor: pointer;
}
h2 span,
h3 span{
    font-size: 50%;
}
.support-action p {
    font-size: 12px;
}
.support-action h4 {
 font-weight: bold;
}
.post {
    border-left: 1px solid #ff9900;
    padding-left: 1em;
}
.post article h1, .comment article h1, 
.post article h2, .comment article h2,
.post article h3, .comment article h3,
.post article h4, .comment article h4 {
    font-weight: bold;
    font-size: larger;
}
.footer {
    display: block;
    width: 100%;
    margin-top: 3rem;
    padding: 3rem 0;
    background: #161310;
    color: #fff;
}
.footer small {
    color: #fff;
}
.footer a {
    text-decoration: none;
}
.footer a:hover {
    text-decoration: underline;
}
.footer ul li {
    list-style-type: none;
}


/* Navigation 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
#scrollspy {
    display: inline-block;
}
.nav-tabs-container {
    border-bottom: 1px solid #e5e5e5;
    margin-bottom: 1em;
}
.nav-stacked-fixed {
    position: fixed;
    top: 6em;
}
.nav {
    padding-left: 0;
    margin-bottom: 0;
    margin-left: 0;
    list-style: none;
    display: inline-block;
}
.nav > li {
    position: relative;
    display: block;
}
.nav > li > a {
    position: relative;
    display: block;
    padding: 10px 10px;
}
.nav > li > a:hover,
.nav > li > a:focus {
    text-decoration: none;
    background-color: #fbfaf9;
}
.nav > li.disabled > a {
    color: #524535;
}
.nav > li.disabled > a:hover,
.nav > li.disabled > a:focus {
    color: #524535;
    text-decoration: none;
    cursor: not-allowed;
    background-color: transparent;
}
.nav-stacked {
    width: 100%;
}
.nav-tabs > li {
    float: left;
    margin-bottom: -3px;
}
.nav-tabs > li > a {
    line-height: 2.8;
    height: 4.5rem;
    text-decoration: none;
}

.nav-stacked > li > a {
    line-height: 1.8;
    height: 2.5rem;
    text-decoration: none;
    font-size: 1.5rem;
}
.nav-tabs > li > a:hover
.nav-stacked > li > a:hover {
    color: #fbfaf9;
}
.nav-tabs > li.active > a,
.nav-tabs > li.active > a:hover,
.nav-tabs > li.active > a:focus {
    font-weight: 600;
    text-decoration: underline;
}
@media (min-width: 1000px) {
    .nav-tabs > li.active > a,
    .nav-tabs > li.active > a:hover,
    .nav-tabs > li.active > a:focus {
        text-decoration: none;
        border-bottom-style: solid;
        border-bottom-color: #3299bb;
        border-radius: 3px;
    }
}
.nav-stacked > li.active > a,
.nav-stacked > li.active > a:hover,
.nav-stacked > li.active > a:focus {
    font-weight: 600;
    margin-right: 0;
    margin-left: 0;
    background-color: #fff;
    border-left-style: solid;
    border-left-color: #3299bb;
}
.nav-tabs.nav-horizontal > li.active > a,
.nav-tabs.nav-horizontal > li.active > a:hover,
.nav-tabs.nav-horizontal > li.active > a:focus, 
.nav-stacked.nav-horizontal > li.active > a,
.nav-stacked.nav-horizontal > li.active > a:hover,
.nav-stacked.nav-horizontal > li.active > a:focus {
    border-width: 3px;
}
/* ... */

